update v1 doc after thorougly iterating on it in Cursor chat

--- a/ideas/v1.md
+++ b/ideas/v1.md
@@ -1,38 +1,287 @@
-# First version
+# Competition Management Platform - v1 Specification
 
 A platform that helps the UM aréna admins organize competitions and manage applications to them.
-There are two types of users: administrators and regular event attendees (let's call them players). Administrators can also be players of competitions.
 
-Competitions can only be created and managed by administrators. A competition can have an upper limit of players that can join. After that is reached, new players are only eligible to sign up for a waitlist. After an application is sent, the player automatically gets an email that states whether their application was successful or not. A player can view whether he already applied. Players can withdraw their application - if they do so and there are players on the waitlist, they automatically get their applications approved and an email about it.
+## Core Concepts
 
-When a player signs up, they need to fill in the following information:
+### User Model
 
-- player name
-- player email (should be autocompleted through some kind of login or as a standalone field)
-- (optional) discord username
-- (optional) additional information (e.g. extra fields for 2v2)
-- (optional) consent to show user under the competition as "Going"
+**Users** can have two roles:
 
-When an application is submitted, its timestamp should be stored (important mostly for the waitlist).
+- **Administrators**: Can create and manage competitions, approve/decline applications (all admins have equal privileges)
+- **Players**: Can apply to competitions (admins can also be players)
 
-When a competition is created, the following information should be added:
+**User Properties:**
 
-- event name
-- background photo
-- application deadline
-- description (probably best in markdown)
-- player cap (optional)
-- additional fields and their labels the applicants should fill
+- Standard set of properties Clerk exposes
+- `isDeleted`: Boolean flag for soft-delete (deleted users retain their data, hopefully managed through Clerk)
+- All admins have the same privileges (no super-admin vs regular admin distinction)
 
-Administrators should have the following privileges:
+### Competition Model
 
-- they can view each applicant for a competition
-- they can decline applications (also communicated sending an email about it)
-- see a list of users on the platform (?)
-- an admin can turn another user into an administrator
+A **Competition** represents an event with the following properties:
 
-Users should be automatically created for someone who applied to a competition (through email verification) - hopefully can be handled by Clerk.
-Users have the option to log in with Discord and apply that way.
-Merging discord and email-based users should be handled.
+- `name`: Competition title
+- `description`: Markdown-formatted description
+- `backgroundPhoto`: Background image URL
+- `applicationDeadline`: When applications close (datetime)
+- `playerCap`: Maximum number of accepted players (optional, null = unlimited)
+- `customFields`: Array of text field definitions with labels for applicants to complete
+- `status`: Enum (upcoming, open, closed, ended, canceled)
+- `createdAt`: Timestamp
+- `updatedAt`: Timestamp (can be modified anytime by admins, including post-deadline)
+- `reminderEmailConfig`: Object containing:
+  - `enabled`: Boolean (default true for v1)
+  - `sendBeforeDays`: Number of days before competition start to send reminder
+  - `customMessage`: Optional custom message text
 
-Email sending should be implemented using Resend.
+### Application Model
+
+An **Application** represents a player's submission to a competition:
+
+- `userId`: Reference to the submitting user
+- `competitionId`: Reference to the competition
+- `status`: Enum (approved, declined, withdrawn)
+  - **All applications start as `approved`** (no pending state exists)
+  - Admins can later change to `declined`
+  - Users can change to `withdrawn` (if before deadline or post-deadline)
+- `submittedAt`: Timestamp of submission (used for waitlist ordering)
+- `playerName`: Display name for this competition
+- `discordUsername`: Optional Discord handle
+- `customFieldResponses`: Map of text field responses
+- `withdrawalCount`: Number of times user has withdrawn and reapplied (for limiting)
+
+**Application Rules:**
+
+- **Withdrawn applications**: Users can reapply if application deadline hasn't passed
+  - **Reapplication limit**: Maximum 3 withdrawals per competition (prevents email spam)
+  - After 3rd withdrawal, user must contact admin to reapply
+  - **Reapplied users** always go to the end of the waitlist
+- **Declined applications**: Users **cannot** reapply (permanently rejected)
+- **Declined applications**: Do **NOT** count toward `playerCap` (only `approved` applications count)
+- **Cap calculation**: Only `approved` status applications are counted for capacity checking
+
+### Waitlist Logic
+
+- When `playerCap` is reached, new applications are automatically placed on waitlist
+- Applications are ordered by `submittedAt` timestamp (FIFO)
+- Only `approved` applications count toward the cap
+- When a player withdraws, the next person on the waitlist is automatically promoted and notified
+- **No manual waitlist reordering** - admins cannot manually adjust waitlist order
+- **Important**: If capacity is not reached by the deadline, there should be no waitlist
+
+**PlayerCap Changes:**
+
+- **Increasing cap**: Automatically promotes applications from waitlist up to new limit
+- **Decreasing cap**: When reducing capacity:
+  - System warns but allows the change
+  - Last approved applications (by `submittedAt`) are demoted to waitlist
+  - Demotion emails are sent to affected users
+  - Waitlist order is adjusted to maintain FIFO ordering
+
+## Competition Lifecycle
+
+### Status Transitions
+
+```
+CREATED → UPCOMING → OPEN → CLOSED → ENDED
+                   ↓
+              CANCELED (auto-withdraws all applications)
+```
+
+**Status Definitions:**
+
+- **upcoming**: Competition created but not yet open for applications
+- **open**: Applications are being accepted
+- **closed**: Deadline has passed, no new applications accepted
+- **ended**: Competition has concluded
+- **canceled**: Competition was canceled
+  - All approved applications are automatically withdrawn
+  - Notification sent to all affected users
+
+### Competition Edits
+
+- Admins can edit competitions **anytime** (pre- and post-deadline)
+- Can modify: name, description, backgroundPhoto, deadline, playerCap, customFields
+- **Extending deadlines**: When deadline is extended past its current date, applications can resume being accepted - competition state changes accordingly
+- **Changing playerCap**: See Waitlist Logic section above
+
+## Application Submission Flow
+
+### Player Registration & Application
+
+When submitting an application, the form should collect:
+
+**Required Fields:**
+
+- Player name (display name for this competition)
+- Email address (auto-filled if logged in)
+
+**Optional Fields:**
+
+- Discord username (autofilled if logged in through Discord when field is present)
+- Custom fields (as defined in competition's `customFields`)
+- Note: All custom fields are freeform text in v1
+
+**Validation:**
+
+- Email format validation (using Zod)
+- Check if user already has a declined application (prevent reapplication)
+- Check withdrawal count limit (max 3 reapplication cycles)
+- Check application deadline hasn't passed
+
+### Email Notifications
+
+All status changes trigger automated emails via **Resend**:
+
+1. **Application Submitted**: Confirmation with waitlist status if applicable (all submissions are auto-approved)
+2. **Application Declined**: Notification of rejection (admins can decline at any time)
+3. **Waitlist Promotion**: Notification when moved from waitlist to approved status (due to e.g. another application's withdrawal)
+4. **Waitlist Demotion**: Notification when demoted to waitlist due to playerCap decrease
+5. **Application Withdrawal**: Confirmation email
+6. **Competition Canceled**: Notification sent to all approved applications
+7. **Competition Reminder**: Sent before competition starts (configurable timing and message)
+
+### Application Lifecycle
+
+```
+Submission: APPROVED (auto-approved)
+              ↓
+    ┌─────────┴─────────┐
+    ↓                   ↓
+DECLINED (admin)    WITHDRAWN (user)
+    ↓                   ↓
+Can't reapply       Can reapply (if before deadline, and < 3 withdrawals)
+```
+
+## Administrator Privileges
+
+Administrators can:
+
+- **Create** competitions
+- **Edit** competitions **anytime** (even after deadline/closure), including:
+  - Extending application deadlines
+  - Modifying competition details
+  - Changing player cap
+- View all applicants for **any** competition
+- Decline individual applications at any time
+- Manually adjust application status
+- Promote another user to administrator role (at any time)
+- View list of all platform users
+- Cancel competitions (auto-withdraws all applications)
+- Export application data for competitions
+
+**Post-Deadline Actions:**
+
+- Admins can still edit competitions after deadline
+- Admins can still decline applications after deadline
+- Users can withdraw even after the deadline
+- Admins can grant exceptions for users who exceeded withdrawal limit
+
+**Admin Role Escalation:**
+
+- A player who becomes an admin mid-competition gains access to admin panel
+- They can see all competitions, including ones they created as a player
+- They can manage applications even for competitions they applied to as a player
+
+## Authentication & User Management
+
+### User Creation Strategy
+
+- Users are **automatically created** upon first application submission if not logged in already
+- Email verification handled via **Clerk** authentication provider
+- Users must verify email before application is considered valid
+
+### Authentication Methods
+
+- **Email/Password** (via Clerk)
+- **Discord OAuth** (via Clerk integration)
+
+### Account Merging
+
+- Handle merging accounts when user signs in with different methods (e.g., email-only → adds Discord)
+- Associate applications with merged user entity
+- **TODO**: Define merging rules and UX flow
+
+### Account Deletion
+
+- **Soft-delete approach**: Users are marked as deleted but data is retained
+- Deletion handled through Clerk (if supported) or custom implementation
+- Applications remain associated with deleted users but turn into withdrawn ones
+- Deleted users cannot access the platform but their application history is preserved
+
+## Technical Stack
+
+- **Authentication**: Clerk (handles user creation, email verification, Discord OAuth)
+- **Email Service**: Resend (for application status notifications)
+- **Validation**: Zod (for email and field validation)
+- **Framework**: TanStack Router + React (TanStack Query for data fetching)
+- **Database**: Neon with Drizzle ORM
+
+## Edge Cases & Special Behaviors
+
+### Competition Management Edge Cases
+
+#### 1. Cancellation
+
+- When competition is canceled: All `approved` applications automatically change to `withdrawn`
+- Notifications sent to all affected users
+- Competition status changes to `canceled`
+
+#### 2. Deadline Extension
+
+- If deadline extended before passing: no impact on existing applications
+- If deadline extended after passing: applications can resume being accepted
+- Existing waitlist remains intact
+
+### Application Management Edge Cases
+
+#### 4. Reapplication Limit
+
+- Maximum 3 withdrawal/reapplication cycles per competition
+- After 3rd withdrawal, user must contact admin to reapply
+- Prevents email notification spam
+- Reapplied users always go to the end of the waitlist
+
+#### 5. Multiple Applications
+
+- Users can apply to multiple different competitions simultaneously
+- Each competition has its own application
+- Withdrawal from one doesn't affect others
+
+#### 6. Concurrent Withdrawals
+
+- If multiple users withdraw simultaneously, waitlist promotions occur in `submittedAt` order
+
+#### 7. Role Change Mid-Competition
+
+- Player becoming admin gains access to all admin features
+
+### Validation & Data Edge Cases
+
+#### 8. Email Validation
+
+- Format validation using Zod
+- Prevent duplicate email addresses per competition (handled at user-level through Clerk)
+
+#### 9. Time Zone Handling
+
+- Application deadlines stored in UTC
+- Display deadlines in local time zone
+
+#### 10. Custom Fields
+
+- Only freeform textfields allowed in v1
+- Each field has a label that defines what information to collect
+
+## Future Versions (Deferred Features)
+
+The following features are explicitly **NOT** in v1:
+
+- Notification preferences / opt-out options
+- Application export formats (handled by Drizzle client)
+- Discord bot integration beyond OAuth
+- Public participant lists
+- Competition templates
+- Custom field types beyond text (e.g., dropdowns, dates, numbers)
+- Different validation rules per custom field
